fdo#74605 negative value for wp:extents value causing corruption

Description:
After roundtrip
<wp:extent cx="-22327235" cy="149225" />
The cx value is negative so that the roundtrip file gives error while opening.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7898

Change-Id: I563f292ac5aaaeb0726159db1f4852a7e237f7ea